Move prerequisite info to marker
